Add POST method for create new user in users list

--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,9 +1,12 @@
 h1 Users list
 
-form(action='/users/search')
+form(action='/users/search', method='GET')
 	input(type='text', name='q', value=q)
 	button(type='submit') Search
 
 ul 
 	each user in users
 		li= user.name
+
+br
+a(href='/users/create') Create new user
