--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -2,11 +2,23 @@ h1 Users list
 
 form(action='/users/search', method='GET')
 	input(type='text', name='q', value=q)
+	span &emsp;
 	button(type='submit') Search
 
-ul 
-	each user in users
-		li= user.name
+if usersLength > 0
+	p Found #{usersLength} user
+	
+	ul 
+		each user in users
+			li
+				span #{user.name} &emsp;
+				a(href='/users/views/' + user.id) View
+else
+	p Nothing here
 
 br
 a(href='/users/create') Create new user
+span &emsp;
+a(href='/users') Refresh
+span &emsp;
+a(href='/') Home
