--- a/views/index.pug
+++ b/views/index.pug
@@ -1,2 +1,8 @@
-h1 Hello #{name}
-a(href='/users') User 
+extends ./layouts/common.pug
+
+block append headTitle
+	title Home
+
+block append bodyContents
+	h1 Hello #{name}
+	a(href='/users') User 
