--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -16,7 +16,7 @@ block append bodyContents
 
 		- var i = 1;
 		
-		table(class='table table-hover', border='1', cellpadding='1', cellspacing='0')
+		table(class='table table-bordered table-striped table-hover')
 			thead
 				tr
 					th No
